--- a/code/modelling.ipynb
+++ b/code/modelling.ipynb
@@ -398,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Neural Network without PCA"
+    "### Model without PCA"
    ]
   },
   {
@@ -449,7 +449,6 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "#model.add(Input(shape=(n_features,)))\n",
     "model.add(Dense(128, activation=\"tanh\", input_shape=(n_features,)))\n",
     "model.add(Dense(64, activation=\"tanh\"))\n",
     "model.add(Dense(7, activation=\"softmax\"))"
@@ -664,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Neural Network with PCA"
+    "### Model with PCA"
    ]
   },
   {
@@ -715,10 +714,8 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "#model.add(Input(shape=(n_features,)))\n",
-    "#model.add(Dropout(0.30))\n",
     "model.add(Dense(n_features, activation=\"tanh\", input_shape=(n_features,)))\n",
-    "#model.add(Dense(10, activation=\"tanh\"))\n",
+    "#model.add(Dense(n, activation=\"tanh\"))\n",
     "model.add(Dense(7, activation=\"softmax\"))"
    ]
   },
